# redpanda

./: .bazelrc  .clangd  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .ruff.toml  .yapfignore  BUILD  CLAUDE.md  MODULE.bazel  README.md  buf.gen.openapi.yaml  buf.yaml
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: backport-command.yml  backport-on-merge.yml  buf.yml  buildkite-slash-commands.yml  check-ducktape-protos.yml  claude-code-review.yml  cloud-installpack-bk-trigger.yml  dispatch-api-docs.yml  lint-bazel-dependency-graph.yml  lint-bazel-pkg-tool.yml  lint-cpp.yml  lint-golang.yml  lint-python.yml  lint-sh.yml  lint-yaml.yml  p.yml  promote.yml  publish-apache-polaris-python-client.yml  release-rp-storage-tool.yml  rp-storage-tool-checks.yml  rpk-build.yml  slash-commands.yml  transform-sdk-build.yml  (+3 more)
bazel/: build.bzl  internal.bzl  repositories.bzl  test.bzl
cmake/: dependencies.cmake
licenses/: third_party.md
src/v/datalake/translation/: BUILD  CMakeLists.txt  deps.cc  deps.h  partition_translator.cc  partition_translator.h  scheduling.cc  scheduling.h  scheduling_policies.cc  state_machine.cc  state_machine.h  translation_probe.cc  translation_probe.h
src/v/datalake/translation/tests/: BUILD  partition_translator_tests.cc  scheduler_fixture.cc  scheduler_fixture.h  translated_log_offset_test.cc
tests/: ducktape-common-retry.yml  ducktape-merge-retry.yml  ducktape-pr-retry.yml  local_venv.sh  pyrightconfig.json  setup.py
tools/: BUILD  bench-wrapper.sh  clang-format  dev_cluster.py  dt  redpanda-gdb.py  run-cov
(+2343 files in other folders)
